# new-tab-page

./: CMakeLists.txt  README.md  server.cpp
.github/workflows/: cmake-multi-platform.yml
scripts/: macos-install.sh  macos-uninstall.sh  make-generated.sh
static/: index.css  index.html  index.js
